src/index.css
/* ... */
/* Firefox scrollbar styles */
body {
  scrollbar-width: thin;
  scrollbar-color: #f1f1f1;
}

/* Fallback for browsers not supporting custom scrollbars */
body::-webkit-scrollbar {
  display: none;
}

.p-dialog {
  width: 90vw;
  max-width: 880px;
  margin: auto;
  overflow-y: auto;
}
@media (min-width: 900px) {
  .p-dialog {
    width: 80vw;
  }
}

.note-content {
  white-space: pre-line;
}

.accordion-item {
  margin-left: 15px;
  width: 96%; 
}

span.notes-accordion-button.notes-header-link {
  width: 20px;
  color: white;
  position: absolute;
  top: 2px;
  opacity: 0.2;
}
span.notes-accordion-button.notes-header-link:hover {
  opacity: 1;
}

.notes-header-edit {
  color: rgba(255, 255, 255, 0.9);
  opacity: 0.5;
}
.notes-header-edit:hover {
  opacity: 1;
  cursor: pointer;
}

.notes-header-delete {
  background-color: red;
  -webkit-mask-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23777'><path d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/></svg>");
  background-size: 20px 20px;
  height: 26px;
  width: 26px;
  opacity: 0.2;
  position: absolute;
  top: 1px;
  right: -55px;
}
.notes-header-delete:hover {
  opacity: 1;
  cursor: pointer;
}

.notes-accordion-button {
  background-color: #6156e3;
  margin-bottom: 1px;
  padding: 4px;
  padding-left: 3px;
  font-size: 0.9rem;
  white-space: nowrap;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.scroll-to-top {
  width: 40px;
  height: 40px;
  border: 0px;
  border-radius: 50%;
  opacity: 0.66;
}
.scroll-to-top:hover {
  opacity: 1;
}

.accordion-button {
  background-color: #6156e3;
  color: white;
  transform: scale(1.02);
  border: 0px;
}

.notes-menu-accordion-body {
  background-color: rgba(97, 86, 227, 0.80);
  color: white;
  padding-top: 8px;
  padding: 12px;
  padding-right: 10px;
  padding-bottom: 16px;
  font-size: 0.9rem;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}
.notes-menu-accordion-body:hover {
  background-color: rgba(97, 86, 227, 0.76);
}

.badge {
  color: white;
  border-radius: 50rem;
  border: 2px solid rgba(255, 255, 255, 0.5);
  margin-right: 7px;
  padding-left: 0.65em;
  padding-right: 0.65em;
  padding-top: 0.35em;
  padding-bottom: 0.35em;
  font-size: 0.9em; 
}

.badge.bg-light {
  background-color: rgba(79, 70, 229, 0.5);
  line-height: 2.6;
}

.badge.bg-light:hover {
  border: 2px solid rgba(255, 255, 255, 1);
  cursor: pointer;
}

.p-dialog-header {
  padding-top: 1.25rem;
  padding-bottom: 0.33rem;
  border-top-right-radius: 0px;
}
.p-dialog-content {
  padding-bottom: 1.33rem;
  overflow: visible;
  border-bottom-right-radius: 0px;
}
.dark-mode .p-dialog-header,
.dark-mode .notes-header-edit,
.dark-mode .p-dialog-content {
  color: #e0e0e0;
  background-color: #2B2B2B;
}
.dark-mode .p-dialog-content {
  padding-bottom: 1.33rem;
  overflow: visible; 
}
.dark-mode .accordion-button,
.dark-mode .notes-accordion-button {
  background-color: #2B2B2B;
}

.dark-mode .notes-menu-accordion-body,  
.dark-mode .badge,
.dark-mode .badge.bg-light {
  background-color: #222;
  color: #e0e0e0;
}
.dark-mode .notes-header-edit:hover,
.dark-mode .notes-menu-accordion-body:hover {
  background-color: #272727;
}
.dark-mode .badge.bg-light.rounded-pill {
  background-color: #2B2B2B;
  color: #e0e0e0;
  border-color: #555; 
}
.dark-mode .badge.bg-light.rounded-pill:hover{
  border-color: #c7d2fe;
}
.dark-mode .notes-header-delete {
  background-color: gray;
  opacity: 0.3;
}
.dark-mode .notes-header-delete:hover {
  opacity: 1;
}
.dark-mode .notes-header-edit:hover,
.dark-mode .badge.bg-light:hover {
  border-color: #fff;
}
.p-chips .p-chips-multiple-container {
  background-color: white;
  padding: 0.25rem 0.75rem;
}
.p-chips-input-token input
{
  font-size: 0.86rem;
}
.p-chips-token
{
  font-size: 0.9rem;
  margin-top: 2px;
  padding: 0.25rem 0.75rem;
  margin-bottom: 2px;
}
.dark-mode .p-inputtext-sm,
.dark-mode .p-chips .p-chips-multiple-container,
.dark-mode .p-chips-multiple-container
{
  color: #E0E0E0;
  border-color: #999;
  background-color: #222;
}
.dark-mode .p-chips .p-chips-multiple-container {
  padding: 0.25rem 0.75rem;
}
.dark-mode .p-inputtext-sm:hover,
.dark-mode .p-chips .p-chips-multiple-container:hover,
.dark-mode .p-chips-multiple-container:hover
{
  border-color: white;
  background-color: #222;
}
.dark-mode .p-chips-input-token input
{
  color: #E0E0E0;
  font-size: 0.86rem;
}
.dark-mode .p-chips-token
{
  background-color: #bbb;
  padding: 0.25rem 0.75rem;
}
.dark-mode .p-chips-token-label
{
  color: black;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header .home {
  color: white;
}
.home:hover {
  cursor: pointer;
}

header h2{
  flex: 1;
  text-align: center;
  margin: 0;
}

label.theme-switch {
  margin-right: 23px;

}
.theme-switch {
  position: relative;
  display: inline-block;
  width: 34px;
  height: 20px;
}

.theme-switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #6156e3;
  transition: .4s;
  border-radius: 34px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 12px;
  width: 12px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  transition: .4s;
  border-radius: 50%;
}

input:checked + .slider {
  background-color: #666;
}

input:checked + .slider:before {
  transform: translateX(14px);
} 

.p-button.p-component {
  padding: 0.66rem 1.25rem;
}

.p-button.p-component.p-button-outlined {
  background-color: rgba(255, 255, 255, 0.3);
  border: 1px solid #6366f1;
  padding: 0.66rem 1.25rem;
  font-size: 1rem;
  transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
  border-radius: 6px;
}

.p-button.p-component.p-button-outlined:hover {
  background-color: rgba(255, 255, 255, 0.4);
}
/* ... */

